--- a/src/03section/Format.ipynb
+++ b/src/03section/Format.ipynb
@@ -120,8 +120,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e7c025db-9614-403b-8154-37374a4eb551",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "年齢を教えてください 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = input(\"年齢を教えてください\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "11289357-5408-4e72-92fe-22c00838dc34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81da29b4-690f-437b-8b06-0be8fb91b457",
    "metadata": {},
    "outputs": [],
    "source": []
